--- a/cpp_aizuonline01.ipynb
+++ b/cpp_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOK7uTf46jEpM9f3EGiFIZD",
+      "authorship_tag": "ABX9TyMMLbYSWiFmPiyb8LyJvigH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3160,7 +3160,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3183,7 +3183,7 @@
       "source": [
         "!g++ transform.cpp -o transform; echo abcde 3 replace 1 3 xyz reverse 0 2 print 1 4 |./transform"
       ],
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3231,7 +3231,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3254,7 +3254,7 @@
       "source": [
         "!g++ distancepoint01.cpp -o distancepoint01; echo 0 0 1 1 |./distancepoint01"
       ],
-      "execution_count": 158,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3263,15 +3263,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "KH7Xc8yGzIC-"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -3323,7 +3314,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3346,7 +3337,7 @@
       "source": [
         "!g++ triangle01.cpp -o triangle01; echo 4 3 90 |./triangle01"
       ],
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3418,7 +3409,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 182,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3441,7 +3432,7 @@
       "source": [
         "!g++ standarddeviation.cpp -o standarddeviation; echo 5 70 80 100 90 20 3 80 80 80 0 |./standarddeviation"
       ],
-      "execution_count": 184,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3513,6 +3504,88 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TZlVetaPl72q",
+        "outputId": "dae074bf-ef48-4c6d-f7c7-cdd2a1baa61a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile distanceminkowski.cpp\n",
+        "#include <cmath>\n",
+        "#include <iomanip>\n",
+        "#include <iostream>\n",
+        "\n",
+        "int main() {\n",
+        "    int n, x[100], y[100];\n",
+        "    std::cin >> n;\n",
+        "    for (int i = 0; i < n; i++) std::cin >> x[i];\n",
+        "    for (int i = 0; i < n; i++) std::cin >> y[i];\n",
+        "\n",
+        "    double d[4];\n",
+        "    for (int i = 0; i < 4; i++) d[i] = 0.0;\n",
+        "\n",
+        "    for (int p = 1; p <= 3; p++) {\n",
+        "        for (int i = 0; i < n; i++) {\n",
+        "            d[p] += pow(fabs(x[i] - y[i]), p);\n",
+        "        }\n",
+        "        d[p] = pow(d[p], 1.0 / p);\n",
+        "    }\n",
+        "\n",
+        "    for (int i = 0; i < n; i++) {\n",
+        "        d[0] = (d[0] < fabs(x[i] - y[i]) ? fabs(x[i] - y[i]) : d[0]);\n",
+        "    }\n",
+        "\n",
+        "    std::cout << std::fixed << std::setprecision(8);\n",
+        "\n",
+        "    std::cout << d[1] << \"\\n\";\n",
+        "    std::cout << d[2] << \"\\n\";\n",
+        "    std::cout << d[3] << \"\\n\";\n",
+        "    std::cout << d[0] << \"\\n\";\n",
+        "\n",
+        "    return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting distanceminkowski.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QAVXxB10l7pG",
+        "outputId": "62259f6f-1cca-42bc-e891-48b92c9b4db2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ distanceminkowski.cpp -o distanceminkowski; echo 3 1 2 3 2 0 4 |./distanceminkowski"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4.00000000\n",
+            "2.44948974\n",
+            "2.15443469\n",
+            "2.00000000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "NoN0066LhR2i"
@@ -3520,6 +3593,29 @@
       "source": [
         "### ITP1_11_A: Dice I\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qh83zUHmp7o3"
+      },
+      "source": [
+        "%%writefile dice01.cpp\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oDRQoWWhp7c4"
+      },
+      "source": [
+        "!g++ dice01.cpp -o dice01; echo 3 1 2 3 2 0 4 |./dice01"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
