--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "learnhaskell.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPRQOcToZSAByh5Jgf+hwaj",
+      "authorship_tag": "ABX9TyP4bTAAHCHIdbY/SEFsyBI/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,7 @@
         "%%capture\n",
         "!apt install ghc"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -3257,15 +3257,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "qT0BZBxyqFaN",
-        "outputId": "75022cd0-2840-47bb-ba3b-586b61d6545d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "75022cd0-2840-47bb-ba3b-586b61d6545d"
       },
       "source": [
         "!ghci -e 'let xxs = [[1,3,5,2,3,1,2,4,5],[1,2,3,4,5,6,7,8,9],[1,2,4,2,1,6,3,1,3,2,3,6]] in  [ [ x | x <- xs, even x ] | xs <- xxs]'\n"
       ],
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3289,16 +3289,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "YmtFps_Gp2ED",
-        "outputId": "8d10b870-ac83-4f80-a8a8-15f58efe5dde",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8d10b870-ac83-4f80-a8a8-15f58efe5dde"
       },
       "source": [
         "# 長さが合わない時 => 残りは捨てられる\n",
         "!ghci -e 'zip [5,3,2,6,2,7,2,5,4,6,6] [\"im\",\"a\",\"turtle\"]'"
       ],
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3313,16 +3313,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "oZibfkpLqvnI",
-        "outputId": "28e75dfc-5569-495e-d392-e50b2dbe5778",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "28e75dfc-5569-495e-d392-e50b2dbe5778"
       },
       "source": [
         "# これと遅延評価を利用すると、長いリストを扱える\n",
         "!ghc -e '[ (a,b,c) | c <- [1..10], b <- [1..c], a <- [1..b], a^2 + b^2 == c^2, a+b+c == 24]'\n"
       ],
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3346,23 +3346,74 @@
       "cell_type": "code",
       "metadata": {
         "id": "MAE7s1W9wn2b",
-        "outputId": "582e5094-8260-4067-b1d4-fdd7947a8998",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d4df2bd1-fd03-445d-bfb4-362be41325fe"
+      },
+      "source": [
+        "!ghci -e $':t \\'a\\''\n",
+        "!ghci -e $':t True'\n",
+        "!ghci -e $':t \"HELLO!\"'\n",
+        "!ghci -e $':t (True, \\'a\\')'\n",
+        "!ghci -e $':t 4 == 5'"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "'a' :: Char\n",
+            "True :: Bool\n",
+            "\"HELLO!\" :: [Char]\n",
+            "(True, 'a') :: (Bool, Char)\n",
+            "4 == 5 :: Bool\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QNN-nWJBW7Gp"
+      },
+      "source": [
+        ":: は (の)型(は) (has type of) と読む。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-MlynYqMYOJk",
+        "outputId": "6c0c8b66-a856-4520-f4f3-bbe0e3ec5477",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "!ghci -e $':t \\'a\\''"
+        "!ghc -e $':t (\\'a\\',\\'b\\',\\'c\\')'\n",
+        "!ghc -e $':t [\\'a\\',\\'b\\',\\'c\\']'"
       ],
-      "execution_count": 175,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "'a' :: Char\n"
+            "('a','b','c') :: (Char, Char, Char)\n",
+            "['a','b','c'] :: [Char]\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aynmNzHYYjfR"
+      },
+      "source": [
+        "上のセルの一行目はタプルで、二行目がリスト。"
       ]
     },
     {
@@ -3381,28 +3432,15 @@
         "id": "QgdFRYgAvBiM"
       },
       "source": [
-        "ghci> :t 'a'\n",
-        "'a' :: Char\n",
-        "ghci> :t True\n",
-        "True :: Bool\n",
-        "ghci> :t \"HELLO!\"\n",
-        "\"HELLO!\" :: [Char]\n",
-        "ghci> :t (True, 'a')\n",
-        "(True, 'a') :: (Bool, Char)\n",
-        "ghci> :t 4 == 5\n",
-        "4 == 5 :: Bool\n",
-        "bombHere we see that doing :t on an expression prints out the expression followed by :: and its type.\n",
-        ":: is read as \"has type of\".\n",
-        "Explicit types are always denoted with the first letter in capital case.\n",
-        "'a', as it would seem, has a type of Char.\n",
-        "It's not hard to conclude that it stands for character.\n",
-        "True is of a Bool type.\n",
-        "That makes sense.\n",
+        "\n",
         "But what's this? Examining the type of \"HELLO!\" yields a [Char].\n",
         "The square brackets denote a list.\n",
+        "\n",
         "So we read that as it being a list of characters.\n",
+        "\n",
         "Unlike lists, each tuple length has its own type.\n",
-        "So the expression of (True, 'a') has a type of (Bool, Char), whereas an expression such as ('a','b','c') would have the type of (Char, Char, Char).\n",
+        "So the expression of (True, 'a') has a type of (Bool, Char), whereas an \n",
+        "expression such as ('a','b','c') would have the type of (Char, Char, Char).\n",
         "4 == 5 will always return False, so its type is Bool.\n",
         "\n",
         "Functions also have types.\n",
@@ -3416,16 +3454,21 @@
         "removeNonUppercase has a type of [Char] -> [Char], meaning that it maps from a string to a string.\n",
         "That's because it takes one string as a parameter and returns another as a result.\n",
         "The [Char] type is synonymous with String so it's clearer if we write removeNonUppercase :: String -> String.\n",
-        "We didn't have to give this function a type declaration because the compiler can infer by itself that it's a function from a string to a string but we did anyway.\n",
-        "But how do we write out the type of a function that takes several parameters? Here's a simple function that takes three integers and adds them together:\n",
+        "We didn't have to give this function a type declaration because the compiler can infer by itself that it's a \n",
+        "function from a string to a string but we did anyway.\n",
+        "But how do we write out the type of a function that takes several parameters? Here's a simple function that\n",
+        " takes three integers and adds them together:\n",
         "\n",
         "addThree :: Int -> Int -> Int -> Int\n",
         "addThree x y z = x + y + z\n",
-        "The parameters are separated with -> and there's no special distinction between the parameters and the return type.\n",
+        "The parameters are separated with -> and there's no special distinction between the parameters and the \n",
+        "return type.\n",
         "The return type is the last item in the declaration and the parameters are the first three.\n",
-        "Later on we'll see why they're all just separated with -> instead of having some more explicit distinction between the return types and the parameters like Int, Int, Int -> Int or something.\n",
+        "Later on we'll see why they're all just separated with -> instead of having some more explicit distinction\n",
+        " between the return types and the parameters like Int, Int, Int -> Int or something.\n",
         "\n",
-        "If you want to give your function a type declaration but are unsure as to what it should be, you can always just write the function without it and then check it with :t.\n",
+        "If you want to give your function a type declaration but are unsure as to what it should be, you can always just \n",
+        "write the function without it and then check it with :t.\n",
         "Functions are expressions too, so :t works on them without a problem.\n",
         "\n",
         "Here's an overview of some common types.\n",
@@ -3464,18 +3507,21 @@
         "It's denoted by single quotes.\n",
         "A list of characters is a string.\n",
         "\n",
-        "Tuples are types but they are dependent on their length as well as the types of their components, so there is theoretically an infinite number of tuple types, which is too many to cover in this tutorial.\n",
+        "Tuples are types but they are dependent on their length as well as the types of their components, so there is theoretically \n",
+        "an infinite number of tuple types, which is too many to cover in this tutorial.\n",
         "Note that the empty tuple () is also a type which can only have a single value: ()\n",
         "\n",
         "Type variables\n",
-        "What do you think is the type of the head function? Because head takes a list of any type and returns the first element, so what could it be? Let's check!\n",
+        "What do you think is the type of the head function? Because head takes a list of any type and returns the first element, so what could it be?\n",
+        " Let's check!\n",
         "\n",
         "ghci> :t head\n",
         "head :: [a] -> a\n",
         "boxHmmm! What is this a? Is it a type? Remember that we previously stated that types are written in capital case, so it can't exactly be a type.\n",
         "Because it's not in capital case it's actually a type variable.\n",
         "That means that a can be of any type.\n",
-        "This is much like generics in other languages, only in Haskell it's much more powerful because it allows us to easily write very general functions if they don't use any specific behavior of the types in them.\n",
+        "This is much like generics in other languages, only in Haskell it's much more powerful because it allows us to easily write very\n",
+        " general functions if they don't use any specific behavior of the types in them.\n",
         "Functions that have type variables are called polymorphic functions.\n",
         "The type declaration of head states that it takes a list of any type and returns one element of that type.\n",
         "\n",
@@ -3672,7 +3718,8 @@
         "ghci> :t (*)\n",
         "(*) :: (Num a) => a -> a -> a\n",
         "It takes two numbers of the same type and returns a number of that type.\n",
-        "That's why (5 :: Int) * (6 :: Integer) will result in a type error whereas 5 * (6 :: Integer) will work just fine and produce an Integer because 5 can act like an Integer or an Int.\n",
+        "That's why (5 :: Int) * (6 :: Integer) will result in a type error whereas 5 * (6 :: Integer) will work just fine and produce an Integer \n",
+        "because 5 can act like an Integer or an Int.\n",
         "\n",
         "To join Num, a type must already be friends with Show and Eq.\n",
         "\n",
@@ -3688,7 +3735,8 @@
         "That's useful when you want integral and floating point types to work together nicely.\n",
         "For instance, the length function has a type declaration of length :: [a] -> Int instead of having a more general type of (Num b) => length :: [a] -> b.\n",
         "I think that's there for historical reasons or something, although in my opinion, it's pretty stupid.\n",
-        "Anyway, if we try to get a length of a list and then add it to 3.2, we'll get an error because we tried to add together an Int and a floating point number.\n",
+        "Anyway, if we try to get a length of a list and then add it to 3.2, we'll get an error because we tried to add together an Int and a \n",
+        "floating point number.\n",
         "So to get around this, we do fromIntegral (length [1,2,3,4]) + 3.2 and it all works out.\n",
         "\n",
         "Notice that fromIntegral has several class constraints in its type signature.\n",
