--- a/learnhtml.ipynb
+++ b/learnhtml.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhtml.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOF0lVDnjVfnMHsLlx7AoyP",
+      "authorship_tag": "ABX9TyMrGSxx/7Gc6CA1DdBZIXwO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
         "地の文\n",
         "地の文2"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -113,8 +113,10 @@
         "outputId": "36d0f587-5ee2-49d6-806c-e374d411bc72"
       },
       "source": [
-        "# コメントの実験 <script></script> の中ではスラッシュのコメント記法も使える。\n",
+        "# コメントの実験 \n",
         "# %%html以下では # によるコメントが使えない\n",
+        "# <script></script> の中ではスラッシュのコメント記法 //, /* */ も使える。\n",
+        "# <style></style>の中では /* */ しか使えない\n",
         "%%html\n",
         "<!-- コメント -->\n",
         "<h1>見出し</h1>\n",
@@ -129,7 +131,7 @@
         "/* コメント4 */\n",
         "</script>"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -183,7 +185,6 @@
         "    }\n",
         "</style>\n",
         "\n",
-        "\n",
         "<h1>見出し</h1>\n",
         "<p>段落</p>\n",
         "<div>一行</div>\n",
@@ -191,7 +192,7 @@
         "地の文\n",
         "<div>地の文</div>"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -284,7 +285,7 @@
         "    </li>\n",
         "</ol>"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -336,7 +337,7 @@
         "%%html\n",
         "<p>My cat is <strong>very grumpy.</p>とか</strong>"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -360,25 +361,25 @@
         "id": "1fgxkKFL1Uyb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 163
+          "height": 158
         },
-        "outputId": "7a5810f6-6415-486f-dc94-7c7c035529c1"
+        "outputId": "7578b104-2ee2-4549-b226-278ab7deee6a"
       },
       "source": [
         "# ブロック要素とインライン要素\n",
         "%%html\n",
-        "<em>first</em><em>second</em><em>third</em>\n",
-        "<p>fourth</p><p>fifth</p><p>sixth</p>\n",
-        "<div>fourth</div><div>fifth</div><div>sixth</div>\n"
+        "<em>first</em><em>second</em><em>third</em> <!-- インライン要素 -->\n",
+        "<p>fourth</p><p>fifth</p><p>sixth</p> <!-- ブロック要素 -->\n",
+        "<div>fourth</div><div>fifth</div><div>sixth</div> <!-- ブロック要素 -->\n"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "<em>first</em><em>second</em><em>third</em>\n",
-              "<p>fourth</p><p>fifth</p><p>sixth</p>\n",
+              "<p>fourth</p><p>fifth</p><p>sixth</p> <!-- ブロック要素 -->\n",
               "<div>fourth</div><div>fifth</div><div>sixth</div>"
             ],
             "text/plain": [
@@ -407,7 +408,7 @@
         "<img src=\"https://raw.githubusercontent.com/mdn/beginner-html-site/gh-pages/images/firefox-icon.png\" \n",
         "width=\"100\">\n"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -441,7 +442,7 @@
         "%%html\n",
         "<p>A link to my <a href=\"https://www.mozilla.org/\" title=\"The Mozilla homepage\" target=\"_blank\">favourite website</a>.</p>"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -466,8 +467,8 @@
       },
       "source": [
         "# 属性 attribute\n",
-        "1. 属性名と要素名の間に 1 つの半角スペース(その要素内にすでに 1 つ以上の属性が設定されている場合は、併せて各属性名の間)がある。\n",
-        "1. 属性名とそれに続く等号 (=)がる。\n",
+        "1. 要素名と属性名の間に 1 つの半角スペースがある。\n",
+        "1. 属性名とそれに続く等号 (=) がある。\n",
         "1. 属性値。始端から終端までをクォーテーションマーク (引用符) で囲む。"
       ]
     },
@@ -489,10 +490,11 @@
         "        background: #ddd;\n",
         "    }\n",
         "</style>\n",
+        "\n",
         "<input type=\"text\" disabled value=\"not available\">\n",
         "<input type=\"text\" value=\"Enter something\" title=\"the\">"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -530,7 +532,7 @@
         "'\t&apos;\n",
         "&\t&amp;"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -552,7 +554,7 @@
         "</p> <img src=\"http://www.cygnus-x1.net/links/rush/images/albums/sectors/sector2-movingpictures-cover-s.jpg\"\n",
         "    width=\"100\">"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -593,7 +595,7 @@
         "<div>&lt;div&gt;による改行</div>\n",
         "<div>と比べてみよう。</div>"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -659,7 +661,7 @@
         "  </body>\n",
         "</html>"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -712,11 +714,11 @@
       "metadata": {
         "id": "OWkLWcaoqzgK",
         "cellView": "form",
-        "outputId": "02f3e740-a547-4129-cd7b-7de3b721200e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 191
-        }
+        },
+        "outputId": "02f3e740-a547-4129-cd7b-7de3b721200e"
       },
       "source": [
         "#@title コードを表示しない\n",
@@ -777,7 +779,7 @@
         "    // }\n",
         "</script>"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -870,7 +872,7 @@
         "    </fieldset>\n",
         "</form>"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -958,7 +960,7 @@
         "\n",
         "<p>hummus is suitable for freezing; you should thaw it and use it within a couple of months.</p>"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1032,7 +1034,7 @@
         "<p>I am a policewoman and my name is Trish.</p>\n",
         "<p>My legs are made of cardboard and I am married to a fish.</p>"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1066,7 +1068,7 @@
         "%%html\n",
         "<span style=\"font-size: 32px; margin: 21px 0;\">Is this a top level heading?</span>"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1112,7 +1114,7 @@
         "    <p class=\"fakeh1\">Is thsi a top level heading?</p>\n",
         "</body>"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1172,7 +1174,7 @@
         "    <li>hummus</li>\n",
         "</ul>"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1215,7 +1217,7 @@
         "    <li>The school is on your right, 300 meters up the road</li>\n",
         "</ol>"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1264,7 +1266,7 @@
         "    </li>\n",
         "</ol>"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1321,7 +1323,7 @@
         "    <em>green jumpsuits</em> and <em>silly hats</em>, and seemed to be having a whale of a time. If anyone has\n",
         "    <strong>any</strong> information about this incident, please contact the police <strong>now</strong>.</p>"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1362,7 +1364,7 @@
         "    <em>green jumpsuits</em> and <em>silly hats</em>, and seemed to be having a whale of a time. If anyone has\n",
         "    <span style=\"font-size: 150%\">any</span> information about this incident, please contact the police <span style=\"font-size: 150%\">now</span>.</p>"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1425,7 +1427,7 @@
         "  </li>\n",
         "</ol>"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1501,7 +1503,7 @@
         "    <dd>ドラマで、登場人物が観客のみに対し、ユーモアやドラマチックな効果を狙ってコメントをします。これは通常は感情や、考えや、追加の背景情報です。</dd>\n",
         "</dl>"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1553,7 +1555,7 @@
         " <p>It does not matter how slowly you go as long as you do not stop.</p>\n",
         "</blockquote>"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1596,7 +1598,7 @@
         "\n",
         "<p><abbr title=\"National Aeronautics and Space Administration\">NASA</abbr> sure does some exciting work.</p>"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1637,7 +1639,7 @@
         "<p>Caffeine's chemical formula is C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub>.</p>\n",
         "<p>If x<sup>2</sup> is 9, x must equal 3 or -3.</p>"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1687,7 +1689,7 @@
         "<samp>PING mozilla.org (63.245.215.20): 56 data bytes\n",
         "64 bytes from 63.245.215.20: icmp_seq=0 ttl=40 time=158.233 ms</samp></pre>"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1734,7 +1736,7 @@
         "サイドバー: <aside>; <main> の中に置かれることがよくあります。\n",
         "フッター: <footer>."
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1826,7 +1828,7 @@
         "\n",
         "</body>"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2160,7 +2162,7 @@
         "\n",
         "</body>"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2424,7 +2426,7 @@
         "    </span>.\n",
         "</p>"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2490,7 +2492,7 @@
         "    <p>Total cost: $237.89</p>\n",
         "</div>"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2538,7 +2540,7 @@
         "    But her structure was bad, her semantics were sad<br>\n",
         "    and her markup didn't read very well.</p>"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2577,7 +2579,7 @@
         "<p>その間、ハリーは家に座って、彼の使用料の声明を見つめてそして魅惑の苦痛の手紙が彼の窓を通って飛んで、そして彼の膝に着陸したときに次のスピンオフシリーズが出るだろう時を考えました。彼はそれをぼんやりと読んでため息をついた。「その時は仕事に戻るほうがいい」と彼は言った。\n",
         "</p>"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2768,7 +2770,7 @@
         "\n",
         "</body>"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3221,7 +3223,7 @@
         "\n",
         "</body>"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3475,7 +3477,7 @@
         "<img src=\"images/dinosaur.jpg\"\n",
         "     alt=\"恐竜の画像がはいるハズ。ごめん。\">"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3514,7 +3516,7 @@
         " height=\"171\"\n",
         " title=\"A T-Rex on display in the Manchester University Museum\">"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3578,7 +3580,7 @@
         "  <figcaption>マンチェスター大学博物館に展示されている T-Rex。</figcaption>\n",
         "</figure>"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3623,7 +3625,7 @@
         "    <figcaption>サッポロ一番(さっぽろいちばんしおらーめん)</figcaption>\n",
         "</figure>"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3660,7 +3662,7 @@
         "<iframe src=\"https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d51891.663190924686!2d139.80105967163098!3d35.62208193792607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sja!2sjp!4v1609133463998!5m2!1sja!2sjp\" width=\"400\" height=\"300\" frameborder=\"0\" style=\"border:0;\" allowfullscreen=\"\" aria-hidden=\"false\" tabindex=\"0\"></iframe>\n",
         "</iframe>"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3696,7 +3698,7 @@
         "        allowfullscreen sandbox>\n",
         "</iframe>"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3744,7 +3746,7 @@
         "  <circle cx=\"150\" cy=\"100\" r=\"90\" fill=\"blue\" />\n",
         "</svg>\n"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3786,7 +3788,7 @@
         "    </text>\n",
         "</svg>"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3833,7 +3835,7 @@
         "    </text>\n",
         "</svg>"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3895,7 +3897,7 @@
         "%%%html\n",
         "<style>html {font-family: sans-serif;}table {border-collapse: collapse;border: 2px solid rgb(200, 200, 200);letter-spacing: 1px;font-size: 0.8rem;}td,th {border: 1px solid rgb(190, 190, 190);padding: 10px 20px;}th {background-color: rgb(235, 235, 235);}td {text-align: center;}tr:nth-child(even) td {background-color: rgb(250, 250, 250);}tr:nth-child(odd) td {background-color: rgb(245, 245, 245);}caption {padding: 10px;}</style>"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3933,7 +3935,7 @@
         "    <td>I'm your fourth cell.</td>\n",
         "</table>"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3986,7 +3988,7 @@
         "    </tr>\n",
         "</table>"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4071,7 +4073,7 @@
         "    </tr>\n",
         "</table>"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4169,7 +4171,7 @@
         "    </tr>\n",
         "</table>"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4292,7 +4294,7 @@
         "    </tr>\n",
         "</table>"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4420,7 +4422,7 @@
         "    </tr>\n",
         "</table>"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4523,7 +4525,7 @@
         "    </tr>\n",
         "</table>"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4662,7 +4664,7 @@
         "    </tbody>\n",
         "</table>"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4790,7 +4792,7 @@
         "    </tr>\n",
         "</table>"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4889,7 +4891,7 @@
         "<h1>My First Heading</h1>\n",
         "<p>My first paragraph.</p>"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
